# DockBricks

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  components.json  docs-architecture.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: releasing.md  website-downloads.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  container.rs  lib.rs  main.rs  models.rs  validation.rs  versions.rs
src/components/: app-sidebar.tsx  create-category-dialog.tsx  create-database-dialog.tsx  docker-warning-banner.tsx  engine-warning-banner.tsx
src/components/databases/: database-card.tsx  service-icon.tsx
src/components/dialogs/: delete-database-dialog.tsx  settings-dialog.tsx
src/components/onboarding/: engine-onboarding.tsx
src/components/ui/: dropdown-menu.tsx
src/features/databases/: database-list.tsx  database-selectors.ts  use-database-actions.ts
src/hooks/: use-app-updater.ts  use-container-engine-health.ts  use-container-engine-statuses.ts  use-database-runtime.ts  use-docker-health.ts  use-persistent-state.ts
src/lib/: database-utils.ts  tauri-commands.ts
src/types/: models.ts
