[package]
name = "dockbricks"
version = "0.1.1"
description = "Desktop app for local Docker/Podman database containers"
authors = ["DockBricks Contributors"]
license = "MIT"
repository = "https://github.com/pallepadehat/DockBricks"
homepage = "https://github.com/pallepadehat/DockBricks"
readme = "../README.md"
rust-version = "1.77"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dockbricks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
